# cursor-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/commands/: clarify-task.md  code-review.md  development.md  generate-tasks.md  prd.md  run-all-tests-and-fix.md  security-audit.md
.cursor/rules/: code-review.mdc  python-best-practices.mdc  secure-dev-python.mdc  secure-mcp-dev.mdc  secure-mcp-messaging.mdc
.cursor/skills/dispatching-parallel-agents/: SKILL.md
.cursor/skills/finishing-a-development-branch/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: BACKLOG-PHASE5.md  DECISIONS.md  README.md  STRATEGY.md  architecture.md  cursor-api-key-onboarding.md  gateway-security.md  sdk-tools-snapshot.txt  setup.md  telegram-gateway-onboarding.md
docs/contracts/: async-sdk-facade.md
docs/decisions/: ADR-001-messaging-security.md  ADR-002-async-sdk-facade.md  ADR-003-cross-runtime-resume.md  ADR-004-session-key-workspace.md  ADR-005-testing-strategy.md  ADR-006-telegram-library.md  ADR-007-config-loader.md  ADR-008-agent-busy-gateway.md  ADR-009-session-titles.md  ADR-010-memory-v1.md  ADR-011-compress-flow.md  ADR-012-telegram-chunking.md  ADR-013-slash-commands-skills.md  ADR-014-tool-profiles-mvp.md  ADR-015-tui-stretch-goal.md  ADR-016-honcho-memory-path.md  ADR-017-sdk-version-pin.md  ADR-018-observability-logs.md  ADR-019-packaging-license.md  ADR-020-backlog-promotion.md  ADR-021-graceful-shutdown.md  ADR-022-tdd-prd-feedback-loop.md  ADR-022-tdd.md  ADR-023-long-running-agent-harness.md  ADR-024-error-taxonomy-retry.md  ADR-025-secrets-policy.md  ADR-026-quality-tooling.md  ADR-027-onboarding-first-run.md  README.md  _template.md
docs/prd/: PRD-000-sdk-spike.md  PRD-001-facade.md  PRD-002-session-store.md  PRD-003-cli-repl.md  PRD-004-slash-commands.md  PRD-005-messaging-profile.md  PRD-006-gateway-core.md  PRD-007-telegram-adapter.md  PRD-008-memory-v1.md  PRD-009-skills.md  PRD-010-cron.md  README.md
docs/prompts/: compress.txt  long-running-agent.md
engineering/tasks/: README.md  tasks-PRD-000-sdk-spike.md  tasks-PRD-001-facade.md  tasks-PRD-002-session-store.md  tasks-PRD-003-cli-repl.md  tasks-PRD-004-slash-commands.md
engineering/templates/: task-template.md
examples/: README.md  async_repl.py  gateway.yaml.example  tools_list.py
hooks/messaging/: hooks.json  mcp-deny.sh  pre-tool-deny-write.sh  read-sensitive-deny.sh  sensitive-paths.sh  shell-gate.sh
src/cursor_agent/: __init__.py  agent_cleanup.py  errors.py  facade_logging.py  messaging_hooks.py  pool.py  product_copy.py  sdk_error_mapping.py  sdk_facade.py  sdk_facade_models.py  sdk_facade_protocol.py  sdk_fake.py  sdk_retry.py  sdk_streaming.py  tool_profile_policy.py  utf8_io.py
src/cursor_agent/cli/: app.py  (+13 more)
tests/: test_package_metadata.py  test_pyproject_config.py
tests/integration/: release_uat_helpers.py  test_facade_resume.py  test_facade_shape.py  test_gateway_cold_start.py  test_gateway_shutdown.py  test_package_smoke.py  test_release_uat.py  test_sdk_smoke.py
tests/unit/: cli_repl_helpers.py  command_handler_fakes.py  conftest.py  cron_scheduler_test_helpers.py  gateway_fakes.py  hooks_helpers.py  messaging_hook_test_helpers.py  telegram_adapter_fakes.py  telegram_command_fakes.py  test_cli_bootstrap.py  test_cli_cron.py  test_cli_entry.py  test_cli_exit_codes.py  test_cli_profile.py  test_cli_repl.py  test_cli_resume.py  test_cli_sessions.py  test_cli_slash_commands.py  test_cli_streaming.py  test_commands_compress.py  test_commands_compress_saga.py  test_commands_handlers.py  test_commands_logging.py  test_commands_memory.py  test_commands_new_resume.py  test_commands_operational.py  test_commands_router.py  test_commands_skills.py  test_config_docs.py  test_config_loader.py  test_cron_agents.py  test_cron_gateway_coexist.py  test_cron_jobs_loader.py  test_cron_runtime.py  test_cron_scheduler.py  test_cron_scheduler_reload_paths.py  test_cron_scheduler_runs_shutdown.py  test_cron_store.py  test_cron_telegram_delivery.py  test_display_rich.py  (+51 more)
(+35 files in other folders)
