[project]
name = "cursor-agent"
version = "1.0.0"
description = "Clean-room orchestration layer for the Cursor Python SDK and Composer 2.5"
readme = "README.md"
license = "MIT"
authors = [{name = "cursor-agent authors"}]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4",
    "aiogram>=3,<4",
    "aiosqlite>=0.22.1",
    "cursor-sdk==0.1.7",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.12",
]

[project.urls]
Repository = "https://github.com/adriannoes/cursor-agent"
Homepage = "https://github.com/adriannoes/cursor-agent"
Issues = "https://github.com/adriannoes/cursor-agent/issues"

[project.scripts]
cursor-agent = "cursor_agent.cli.app:main"

[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires CURSOR_API_KEY",
    "package_smoke: builds wheel and installs into a temporary virtualenv",
    "release_uat: maintainer-only release acceptance (CURSOR_API_KEY; optional TELEGRAM_BOT_TOKEN)",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
# ruff format — no black

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cursor_agent"]

[tool.coverage.run]
source = ["cursor_agent"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_agent"]

[tool.hatch.build.targets.wheel.force-include]
"hooks/messaging" = "cursor_agent/hooks/messaging"
